cleaned the text data field

--- a/news_classification.ipynb
+++ b/news_classification.ipynb
@@ -2,21 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     " #Importing Libraries\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "import nltk\n",
+    "import numpy as np\n",
+    "#from dataprep.clean import clean_text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -147,19 +149,20 @@
        "[1043 rows x 3 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "train_df = pd.read_csv('/workspaces/codespaces-blank/news_classification/data/train.csv')\n",
+    "valid_df = pd.read_csv('/workspaces/codespaces-blank/news_classification/data/valid.csv')\n",
     "train_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +238,7 @@
        "max    2224.000000"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +249,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1043, 3)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1043 entries, 0 to 1042\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column     Non-Null Count  Dtype \n",
+      "---  ------     --------------  ----- \n",
+      " 0   ArticleId  1043 non-null   int64 \n",
+      " 1   Text       1043 non-null   object\n",
+      " 2   Category   1043 non-null   object\n",
+      "dtypes: int64(1), object(2)\n",
+      "memory usage: 24.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +307,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +330,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,23 +341,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['politics', 'business', 'sport', 'entertainment', 'tech'],\n",
-       "      dtype=object)"
+       "['politics', 'business', 'sport', 'entertainment', 'tech']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_df['Category'].unique()"
+    "columns_list = train_df['Category'].unique().tolist()\n",
+    "columns_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total no of politics_is 196\n",
+      "Total no of business_is 235\n",
+      "Total no of sport_is 250\n",
+      "Total no of entertainment_is 178\n",
+      "Total no of tech_is 184\n"
+     ]
+    }
+   ],
+   "source": [
+    "counts = train_df['Category'].value_counts()\n",
+    "for col in columns_list:\n",
+    "    col_sum = counts[col]\n",
+    "    print(f'Total no of {col}_is {col_sum}')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CLEANING"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ArticleId</th>\n",
+       "      <th>Text</th>\n",
+       "      <th>Category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1155</td>\n",
+       "      <td>chancellor rallies labour voters gordon brown ...</td>\n",
+       "      <td>politics</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1980</td>\n",
+       "      <td>india s maruti sees profits jump india s bigge...</td>\n",
+       "      <td>business</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>386</td>\n",
+       "      <td>ukip s secret weapon  by any measure  new york...</td>\n",
+       "      <td>politics</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1436</td>\n",
+       "      <td>banker loses sexism claim a former executive a...</td>\n",
+       "      <td>business</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>304</td>\n",
+       "      <td>dallaglio eyeing lions tour place former engla...</td>\n",
+       "      <td>sport</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1038</th>\n",
+       "      <td>464</td>\n",
+       "      <td>dozens held over id fraud site twenty-eight pe...</td>\n",
+       "      <td>tech</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1039</th>\n",
+       "      <td>1468</td>\n",
+       "      <td>commodore finds new lease of life the once-fam...</td>\n",
+       "      <td>tech</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1040</th>\n",
+       "      <td>1023</td>\n",
+       "      <td>fockers keeps us box office lead film comedy m...</td>\n",
+       "      <td>entertainment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1041</th>\n",
+       "      <td>1771</td>\n",
+       "      <td>astrazeneca hit by drug failure shares in angl...</td>\n",
+       "      <td>business</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1042</th>\n",
+       "      <td>1089</td>\n",
+       "      <td>germany calls for eu reform german chancellor ...</td>\n",
+       "      <td>business</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1043 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      ArticleId                                               Text  \\\n",
+       "0          1155  chancellor rallies labour voters gordon brown ...   \n",
+       "1          1980  india s maruti sees profits jump india s bigge...   \n",
+       "2           386  ukip s secret weapon  by any measure  new york...   \n",
+       "3          1436  banker loses sexism claim a former executive a...   \n",
+       "4           304  dallaglio eyeing lions tour place former engla...   \n",
+       "...         ...                                                ...   \n",
+       "1038        464  dozens held over id fraud site twenty-eight pe...   \n",
+       "1039       1468  commodore finds new lease of life the once-fam...   \n",
+       "1040       1023  fockers keeps us box office lead film comedy m...   \n",
+       "1041       1771  astrazeneca hit by drug failure shares in angl...   \n",
+       "1042       1089  germany calls for eu reform german chancellor ...   \n",
+       "\n",
+       "           Category  \n",
+       "0          politics  \n",
+       "1          business  \n",
+       "2          politics  \n",
+       "3          business  \n",
+       "4             sport  \n",
+       "...             ...  \n",
+       "1038           tech  \n",
+       "1039           tech  \n",
+       "1040  entertainment  \n",
+       "1041       business  \n",
+       "1042       business  \n",
+       "\n",
+       "[1043 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df['Text'] = train_df['Text'].str.lower()\n",
+    "train_df"
    ]
   },
   {
