--- a/news_classification.ipynb
+++ b/news_classification.ipynb
@@ -2,9 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /home/codespace/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     " #Importing Libraries\n",
     "import pandas as pd\n",
@@ -13,12 +33,13 @@
     "from sklearn.model_selection import train_test_split\n",
     "import nltk\n",
     "import numpy as np\n",
-    "#from dataprep.clean import clean_text"
+    "import string\n",
+    "nltk.download('stopwords')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +170,7 @@
        "[1043 rows x 3 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +259,7 @@
        "max    2224.000000"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +279,7 @@
        "(1043, 3)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +328,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +351,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +371,7 @@
        "['politics', 'business', 'sport', 'entertainment', 'tech']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -396,151 +417,33 @@
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cleaning_process(df, label = None):\n",
+    "    df[label] = df[label].str.lower()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ArticleId</th>\n",
-       "      <th>Text</th>\n",
-       "      <th>Category</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1155</td>\n",
-       "      <td>chancellor rallies labour voters gordon brown ...</td>\n",
-       "      <td>politics</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1980</td>\n",
-       "      <td>india s maruti sees profits jump india s bigge...</td>\n",
-       "      <td>business</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>386</td>\n",
-       "      <td>ukip s secret weapon  by any measure  new york...</td>\n",
-       "      <td>politics</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1436</td>\n",
-       "      <td>banker loses sexism claim a former executive a...</td>\n",
-       "      <td>business</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>304</td>\n",
-       "      <td>dallaglio eyeing lions tour place former engla...</td>\n",
-       "      <td>sport</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1038</th>\n",
-       "      <td>464</td>\n",
-       "      <td>dozens held over id fraud site twenty-eight pe...</td>\n",
-       "      <td>tech</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1039</th>\n",
-       "      <td>1468</td>\n",
-       "      <td>commodore finds new lease of life the once-fam...</td>\n",
-       "      <td>tech</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1040</th>\n",
-       "      <td>1023</td>\n",
-       "      <td>fockers keeps us box office lead film comedy m...</td>\n",
-       "      <td>entertainment</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1041</th>\n",
-       "      <td>1771</td>\n",
-       "      <td>astrazeneca hit by drug failure shares in angl...</td>\n",
-       "      <td>business</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1042</th>\n",
-       "      <td>1089</td>\n",
-       "      <td>germany calls for eu reform german chancellor ...</td>\n",
-       "      <td>business</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1043 rows × 3 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "      ArticleId                                               Text  \\\n",
-       "0          1155  chancellor rallies labour voters gordon brown ...   \n",
-       "1          1980  india s maruti sees profits jump india s bigge...   \n",
-       "2           386  ukip s secret weapon  by any measure  new york...   \n",
-       "3          1436  banker loses sexism claim a former executive a...   \n",
-       "4           304  dallaglio eyeing lions tour place former engla...   \n",
-       "...         ...                                                ...   \n",
-       "1038        464  dozens held over id fraud site twenty-eight pe...   \n",
-       "1039       1468  commodore finds new lease of life the once-fam...   \n",
-       "1040       1023  fockers keeps us box office lead film comedy m...   \n",
-       "1041       1771  astrazeneca hit by drug failure shares in angl...   \n",
-       "1042       1089  germany calls for eu reform german chancellor ...   \n",
-       "\n",
-       "           Category  \n",
-       "0          politics  \n",
-       "1          business  \n",
-       "2          politics  \n",
-       "3          business  \n",
-       "4             sport  \n",
-       "...             ...  \n",
-       "1038           tech  \n",
-       "1039           tech  \n",
-       "1040  entertainment  \n",
-       "1041       business  \n",
-       "1042       business  \n",
-       "\n",
-       "[1043 rows x 3 columns]"
+       "'hillbillies singer scoggins dies country and western musician jerry scoggins has died in los angeles at the age of 93  his family has said.  scoggins was best remembered for singing the theme tune to popular us tv show the beverly hillbillies. the texan-born singer approached the producers of the programme with theme tune the ballad of jed clampett for the pilot which was screened in 1962. the show  which told the story of a poor man striking oil and moving to beverly hills  ran until 1971.  scoggins  daugher jane kelly misel said that her father never tired of the song and would sing it at least once a day.  he d sing it at birthdays and anniversaries and variety shows. he never stopped performing it   she said. when a film version of the beverly hillbillies was made in 1993  scoggins came out of retirement to perform the theme tune. scoggins sang the lyrics while bluegrass stars lester flatt and earl scruggs played guitar and banjo.'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_df['Text'] = train_df['Text'].str.lower()\n",
-    "train_df"
+    "cleaning_process(train_df, label= 'Text')\n",
+    "train_df.iloc[675,1]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
