--- a/data/dulp.ipynb
+++ b/data/dulp.ipynb
@@ -42,6 +42,17 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "train_path = Path('train.csv') \n",
+    "test_path = Path('valid.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -113,14 +124,14 @@
        "4        304  dallaglio eyeing lions tour place former engla...     sport"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_df = pd.read_csv('/workspaces/codespaces-blank/news_classification/data/train.csv')\n",
-    "test_df = pd.read_csv('/workspaces/codespaces-blank/news_classification/data/valid.csv')\n",
+    "train_df = pd.read_csv(train_path)\n",
+    "test_df = pd.read_csv(test_path)\n",
     "train_df.head(5)"
    ]
   },
